--- a/android/device/softwinner/R1-Qbox/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/android/device/softwinner/R1-Qbox/overlay/frameworks/base/core/res/res/values/config.xml
@@ -46,7 +46,8 @@
          PackageManager.FEATURE_TELEPHONY system feature, which is
          available on *any* device with a telephony radio, even if the
          device is data-only. -->
-    <bool name="config_voice_capable">false</bool>
+    <bool name="config_voice_capable">true</bool>
+
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
          bluetooth interfaces.  If the device doesn't want to support tethering over bluetooth this
          should be empty. -->
