update usb disk mount

--- a/android/device/softwinner/bpi-m1-hdmi/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/android/device/softwinner/bpi-m1-hdmi/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -55,23 +55,23 @@
              android:removable="true" 
              android:emulated="false" 
              android:mtpReserve="0" 
-             android:maxFileSize="0" /> 
+             android:maxFileSize="0" />
 	<storage android:mountPoint="/mnt/usbhost0"
-             android:storageDescription="usbhost0"
+             android:storageDescription="@string/storage_usbhost0"
              android:primary="false"
              android:removable="true"
              android:emulated="false"  
              android:mtpReserve="0" 
              android:maxFileSize="0"/>
 	<storage android:mountPoint="/mnt/usbhost1"
-             android:storageDescription="usbhost1"
+             android:storageDescription="@string/storage_usbhost1"
              android:primary="false"
              android:removable="true"
              android:emulated="false"  
              android:mtpReserve="0" 
              android:maxFileSize="0"/>
        <storage android:mountPoint="/mnt/usbhost2"
-             android:storageDescription="usbhost2"
+             android:storageDescription="@string/storage_usbhost2"
              android:primary="false"
              android:removable="true"
              android:emulated="false"  
